check_errors.txt
warning: unused variable: `ld_struct_re`
  --> langs/build.rs:22:9
   |
22 |     let ld_struct_re = Regex:...
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_ld_struct_re`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `langs` (build script) generated 1 warning
    Checking engine v0.1.0 (/Users/marin.decanini/Documents/PROJETS/Panglot/engine)
warning: unused imports: `Deserialize` and `Serialize`
 --> anki_bridge/src/provider.rs:1:13
  |
1 | ...::{Deserialize, Serialize};
  |       ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `NewCardEntry`
 --> anki_bridge/src/provider.rs:4:76
  |
4 | ...kData, NewCardEntry};
  |           ^^^^^^^^^^^^

warning: unused import: `NewCardEntry`
 --> anki_bridge/src/deck_builder.rs:6:37
  |
6 | ...kData, NewCardEntry};
  |           ^^^^^^^^^^^^

warning: `anki_bridge` (lib) generated 3 warnings (run `cargo fix --lib -p anki_bridge` to apply 3 suggestions)
error[E0433]: failed to resolve: could not find `llm` in `panini_engine`
  --> engine/src/panini_adapter.rs:20:34
   |
20 |         request: &panini_engine::llm::LlmRequest,
   |                                  ^^^ could not find `llm` in `panini_engine`

error[E0433]: failed to resolve: could not find `llm` in `panini_engine`
  --> engine/src/panini_adapter.rs:21:32
   |
21 |     ) -> Result<panini_engine::llm::LlmResponse> {
   |                                ^^^ could not find `llm` in `panini_engine`

error[E0433]: failed to resolve: could not find `llm` in `panini_engine`
  --> engine/src/panini_adapter.rs:45:27
   |
45 |         Ok(panini_engine::llm::LlmResponse {
   |                           ^^^ could not find `llm` in `panini_engine`

error[E0405]: cannot find trait `LlmClient` in crate `panini_engine`
  --> engine/src/panini_adapter.rs:17:21
   |
17 | impl panini_engine::LlmClient for PaniniLlmAdapter<'_> {
   |                     ^^^^^^^^^ not found in `panini_engine`
   |
help: consider importing this trait
   |
 3 + use crate::llm_client::LlmClient;
   |
help: if you import `LlmClient`, refer to it directly
   |
17 - impl panini_engine::LlmClient for PaniniLlmAdapter<'_> {
17 + impl LlmClient for PaniniLlmAdapter<'_> {
   |

error[E0433]: failed to resolve: could not find `llm` in `panini_engine`
  --> engine/src/panini_adapter.rs:27:36
   |
27 | ...engine::llm::Role::System => llm_client::Role::System,
   |            ^^^ could not find `llm` in `panini_engine`
   |
help: consider importing this enum
   |
 3 + use crate::llm_client::Role;
   |
help: if you import `Role`, refer to it directly
   |
27 -                     panini_engine::llm::Role::System => llm_client::Role::System,
27 +                     Role::System => llm_client::Role::System,
   |

error[E0433]: failed to resolve: could not find `llm` in `panini_engine`
  --> engine/src/panini_adapter.rs:28:36
   |
28 | ...engine::llm::Role::User => llm_client::Role::User,
   |            ^^^ could not find `llm` in `panini_engine`
   |
help: consider importing this enum
   |
 3 + use crate::llm_client::Role;
   |
help: if you import `Role`, refer to it directly
   |
28 -                     panini_engine::llm::Role::User => llm_client::Role::User,
28 +                     Role::User => llm_client::Role::User,
   |

error[E0433]: failed to resolve: could not find `llm` in `panini_engine`
  --> engine/src/panini_adapter.rs:29:36
   |
29 | ...engine::llm::Role::Assistant => llm_client::Role::Assistant,
   |            ^^^ could not find `llm` in `panini_engine`
   |
help: consider importing this enum
   |
 3 + use crate::llm_client::Role;
   |
help: if you import `Role`, refer to it directly
   |
29 -                     panini_engine::llm::Role::Assistant => llm_client::Role::Assistant,
29 +                     Role::Assistant => llm_client::Role::Assistant,
   |

Some errors have detailed explanations: E0405, E0433.
For more information about an error, try `rustc --explain E0405`.
error: could not compile `engine` (lib) due to 7 previous errors
